testsuite/bsc.typechecker/numeric/Unsatisfiable_TSub.bsv.bsc-out.expected
checking package dependencies
compiling Unsatisfiable_TSub.bsv
Error: "Unsatisfiable_TSub.bsv", line 5, column 15: (T0030)
  The provisos for this expression are too general.
  Given type:
    function Bool f(Bit#(n) x1)
  The following provisos are needed:
    Add#(n, TAdd#(4, a__), 0)
      Introduced at the following locations:
	"Unsatisfiable_TSub.bsv", line 6, column 11
  The type variables are from the following positions:
    "a__" at "Unsatisfiable_TSub.bsv", line 6, column 11
